--- a/Frontend/panel/styles/style.css
+++ b/Frontend/panel/styles/style.css
@@ -25,7 +25,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 20fr;
-    gap: 30px;
+    /* gap: 30px; */
 }
 
 nav {
